# nhic-dp01

./: .replit  Dockerfile  metadata.yaml  pyproject.toml
.github/workflows/: ci.yaml
k8s/: deployment.yaml
k8s/base/: service.yaml
k8s/overlays/production/: kustomization.yaml  resource-patch.yaml
src/: main.py
src/models/: data_models.py
src/processors/: data_processor.py
tests/: test_data_quality.py
