[project]
name = "data-product"
version = "0.1.0"
description = "Data product"
authors = ["Oscar Makala <omakala@sandtech.com>"]
requires-python = ">=3.11"
dependencies = [
    "faker>=37.1.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "streamlit>=1.43.2",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0"
]
